# sbmpc_ros

./: .gitignore  README.md
doc/: launch_consolidation_plan.md
sbmpc_bringup/: package.xml  setup.cfg  setup.py
sbmpc_bringup/config/: fer_sim_inertials.yaml  franka_controllers.yaml  franka_lfc_params.yaml  franka_lfc_params_sim.yaml  hydrax_bridge.yaml  sbmpc_bridge.yaml  sbmpc_bridge_exact_async.yaml  sbmpc_bridge_exact_async_40hz.yaml  sbmpc_bridge_feedforward.yaml  sbmpc_bridge_m5_diag_central_fd.yaml  sbmpc_bridge_m5_diag_exact_gain.yaml  sbmpc_bridge_m5_diag_exact_none_h10_5000.yaml  sbmpc_bridge_m5_diag_feedback_512.yaml  sbmpc_bridge_m5_diag_local_lqr.yaml  sbmpc_bridge_m5_diag_zero_vel_gain.yaml  sbmpc_bridge_m5_gazebo_30ms.yaml  sbmpc_bridge_milestone5_feedback.yaml  sbmpc_bridge_milestone5_feedback_baseline.yaml  sbmpc_bridge_milestone5_feedforward.yaml  sbmpc_bridge_optimizer_pregrasp.yaml
sbmpc_bringup/launch/: sbmpc_franka_bringup.launch.py  sbmpc_franka_lfc_mujoco_sim.launch.py  sbmpc_franka_lfc_real.launch.py  sbmpc_franka_lfc_sim.launch.py  sbmpc_pregrasp_demo.launch.py
sbmpc_bringup/mujoco/: fer_pick_place_ros2_control_scene.xml  fer_ros2_control.xml  panda_pick_place_ros2_control_scene.xml  panda_ros2_control.xml
sbmpc_bringup/resource/: sbmpc_bringup
sbmpc_bringup/rviz/: pregrasp.rviz
sbmpc_bringup/sbmpc_bringup/: __init__.py  cleanup_sim.py  constants.py  controller_watchdog.py  initial_q.py  launch_preflight.py  pixi_supervisor.py  record_replay.py  record_run.py  replay.py  run_report.py  run_topics.py  trajectory_replay.py  validate_pick_place.py  validate_sim.py  warmup_wait.py
sbmpc_bringup/test/: test_bringup_config.py  test_bringup_launch.py  test_cleanup_sim.py  test_controller_watchdog.py  test_ee_parity_smoke.py  test_initial_q.py  test_launch_imports.py  test_launch_preflight.py  test_model_parity.py  test_mujoco_launch_imports.py  test_mujoco_xacro.py  test_pixi_supervisor.py  test_real_xacro.py  test_record_run.py  test_replay_recorder.py  test_run_report.py  test_validate_sim.py  test_warmup_wait.py
sbmpc_bringup/urdf/: franka_arm_with_sbmpc_inertials.gazebo.xacro  franka_arm_with_sbmpc_mujoco.urdf.xacro  franka_arm_with_sbmpc_real.urdf.xacro
sbmpc_ros_bridge/: package.xml  setup.cfg  setup.py
sbmpc_ros_bridge/resource/: sbmpc_ros_bridge
sbmpc_ros_bridge/sbmpc_ros_bridge/: __init__.py  diagnostics.py  gripper_client.py  hydrax_planner_adapter.py  joint_mapping.py  lfc_bridge_node.py  lfc_control_probe.py  lfc_msg_adapter.py  planner_adapter.py  planner_smoke.py  rollout_markers.py  safety.py
sbmpc_ros_bridge/test/: test_bridge_config.py  test_controller_timing_smoke.py  test_fake_ros_loop.py  test_gripper_client.py  test_hydrax_planner_adapter.py  test_joint_mapping.py  test_lfc_bridge_main.py  test_lfc_control_probe.py  test_lfc_msg_adapter.py  test_planner_adapter.py  test_planner_smoke.py  test_rollout_markers.py  test_safety.py
