<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sbmpc_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration assets for bringing up SB-MPC with Franka and linear_feedback_controller in MuJoCo simulation and on hardware.</description>
  <maintainer email="msabbah@laas.fr">sbmpc</maintainer>
  <license>MIT</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>franka_bringup</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>linear_feedback_controller</exec_depend>
  <exec_depend>mujoco_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sbmpc_ros_bridge</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-yaml</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
