<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sbmpc_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration assets for bringing up SB-MPC with Franka and linear_feedback_controller in MuJoCo simulation and on hardware.</description>
  <maintainer email="msabbah@laas.fr">sbmpc</maintainer>
  <license>MIT</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>agimus_franka_bringup</exec_depend>
  <exec_depend>agimus_franka_description</exec_depend>
  <exec_depend>agimus_franka_gripper</exec_depend>
  <exec_depend>agimus_franka_hardware</exec_depend>
  <exec_depend>agimus_franka_msgs</exec_depend>
  <exec_depend>agimus_franka_robot_state_broadcaster</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>linear_feedback_controller</exec_depend>
  <exec_depend>linear_feedback_controller_msgs</exec_depend>
  <exec_depend>mujoco_ros2_control</exec_depend>
  <exec_depend>mujoco_ros2_control_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>rosbag2_storage_mcap</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sbmpc_ros_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-yaml</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
